fixed spacing issue on blog.html

--- a/styles/main.css
+++ b/styles/main.css
@@ -216,7 +216,7 @@ img {
 
 .wrapper {
   max-width: 1280px;
-  width: 80%;
+  width: 81%;
   margin: 0 auto;
 }
 
@@ -321,9 +321,9 @@ main a {
 }
 
 .blog h1, .contact h1 {
-  font-size: 5.2rem;
+  font-size: 6.2rem;
   font-weight: 700;
-  padding-bottom: 2em;
+  padding-bottom: 1.75em;
 }
 
 .publish-info {
@@ -474,6 +474,29 @@ header {
   background-size: cover;
   color: #f0efed;
   height: 83vh;
+}
+
+.blog header, .contact header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  height: 60vh;
+}
+
+.blog header .top-nav, .contact header .top-nav {
+  width: 100%;
+  background-color: black;
+}
+
+.blog h1, .contact h1 {
+  padding-bottom: 1.7em;
 }
 
 .header-container {
@@ -712,20 +735,6 @@ section {
 
 .blog header {
   background-image: url(../assets/blog-header-1.jpg);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
-.blog .top-nav {
-  background-color: black;
 }
 
 .blog main {
@@ -736,23 +745,27 @@ section {
   -webkit-box-direction: reverse;
       -ms-flex-direction: row-reverse;
           flex-direction: row-reverse;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .blog article {
-  width: 70%;
+  width: 65%;
   position: relative;
   top: -200px;
-  padding-left: 75px;
+  padding-left: 20px;
   margin-bottom: -120px;
 }
 
-.blog article > * {
-  margin: 0 -10px;
+.blog .sidebar {
+  width: 30%;
+  -ms-flex-negative: 0;
+      flex-shrink: 0;
+  margin-top: 80px;
 }
 
-.blog aside {
-  width: 30%;
-  margin-top: 80px;
+.blog .sidebar .wrapper-lg {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -765,7 +778,7 @@ section {
           align-items: flex-end;
 }
 
-.blog aside img {
+.blog .sidebar img {
   -webkit-box-shadow: 30px 15px 0 -15px white, 30px 0 0 -15px white;
           box-shadow: 30px 15px 0 -15px white, 30px 0 0 -15px white;
 }
@@ -773,10 +786,10 @@ section {
 .blog .blog-banner {
   -webkit-box-shadow: -25px 25px 0 -10px #f8e71c;
           box-shadow: -25px 25px 0 -10px #f8e71c;
-  margin: 0;
 }
 
 .post-container {
+  margin-left: -10px;
   padding: 4em 0 0.65em 2.4em;
   -webkit-box-shadow: -5px 5px 0 #f8e71c;
           box-shadow: -5px 5px 0 #f8e71c;
@@ -814,6 +827,21 @@ section {
   display: inline-block;
   padding-left: 0.5em;
   padding-right: 0.8em;
+}
+
+.contact {
+  background-color: #f0efed;
+}
+
+.contact header {
+  background-image: url(../assets/contact-header-1.jpg);
+}
+
+.contact span {
+  outline: 1px solid magenta;
+  display: inline-block;
+  width: 6ch;
+  line-height: 1.2em;
 }
 
 .border {
