--- a/styles/sass/base/_base.scss
+++ b/styles/sass/base/_base.scss
@@ -22,7 +22,7 @@
 }
 .wrapper {
     max-width: 1280px;
-    width: 80%;
+    width: 81%;    //81% is important for blog!!
     margin: 0 auto;
 }
 .wrapper-lg {
