--- a/styles/sass/base/_typography.scss
+++ b/styles/sass/base/_typography.scss
@@ -64,9 +64,9 @@ main a {
 }
 .blog, .contact {
     h1 {
-        font-size: 5.2rem;
+        font-size: 6.2rem;
         font-weight: 700;
-        padding-bottom: 2em;
+        padding-bottom: 1.75em;
     }
 }
 .publish-info {
