--- a/styles/sass/pages/_page-blog.scss
+++ b/styles/sass/pages/_page-blog.scss
@@ -2,33 +2,28 @@
         background-color: $off-white;
     header {
         background-image: url(../assets/blog-header-1.jpg);
-        display: flex;
-        flex-direction: column;
-        justify-content: space-between;
-    }
-    .top-nav {
-        background-color: black;
     }
     main {
         display: flex;        
         flex-direction: row-reverse;
+        justify-content: space-between;
     }
     article {
-        width: 70%;
+        width: 65%;
         position: relative;
         top: -200px;
-        padding-left: 75px;
+        padding-left: 20px;
         margin-bottom: -120px;
-        & > * {
-            margin: 0 -10px;
-        }
     }
-    aside {
+    .sidebar {
         width: 30%;
+        flex-shrink: 0;
         margin-top: 80px;
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
+        .wrapper-lg {
+            display: flex;
+            flex-direction: column;
+            align-items: flex-end;
+        }
         img {
             box-shadow: 30px 15px 0 -15px white,
                         30px 0 0 -15px white;
@@ -36,10 +31,11 @@
     }
     .blog-banner {
         @include imgShadow(true);
-        margin: 0;
     }
 }
 .post-container {
+    // width: 81%;
+    margin-left: -10px;
     padding: 4em 0 0.65em $blog-padding;
     box-shadow: -5px 5px 0 $sunny-yellow;
 }
